
[TestHookModSuite/TestCreateHooks/success - 1]
{
 "body": {
  "createtestkey": "createvalue",
  "testlist": [
   "test1",
   "test2"
  ]
 },
 "description": "",
 "displayName": "test",
 "header": {
  "createtestkey": "createvalue",
  "testlist": [
   "test1",
   "test2"
  ]
 },
 "hookId": "12345678-1234-5678-1234-567812345678",
 "method": "POST",
 "url": "http://test.com"
}
---

[TestHookModSuite/TestCreateHooks/contains_invalid_params - 1]
{
 "instance": "/api/v1/hooks",
 "title": "failed to parse",
 "type": "err_params"
}
---

[TestHookModSuite/TestDeleteHook/not_found - 1]
{
 "instance": "/api/v1/hooks/12345678-1234-5678-1234-567812345678",
 "title": "no data",
 "type": "err_no_data"
}
---

[TestHookModSuite/TestGetHook/success - 1]
{
 "body": {
  "gettestkey": "getvalue",
  "testlist": [
   "test1",
   "test2"
  ]
 },
 "description": "",
 "displayName": "test",
 "header": {
  "gettestkey": "getvalue",
  "testlist": [
   "test1",
   "test2"
  ]
 },
 "hookId": "12345678-1234-5678-1234-567812345678",
 "method": "POST",
 "url": "http://test.com"
}
---

[TestHookModSuite/TestGetHook/not_found - 1]
{
 "instance": "/api/v1/hooks/12345678-1234-5678-1234-567812345678",
 "title": "no data",
 "type": "err_no_data"
}
---

[TestHookModSuite/TestCreateHooks/contains_empty_field - 1]
{
 "instance": "/api/v1/hooks",
 "invalidParams": [
  {
   "name": "displayName",
   "reason": "DisplayName is a required field"
  }
 ],
 "title": "invalid params",
 "type": "err_params"
}
---
